# isobike

./: .gitignore  conftest.py  pyproject.toml  specs.md
testdata/: README.md
testdata/ridge_world/: expected.json
tests/: test_binformat.py  test_golden_files.py  test_reference_router.py  test_ridge_world.py
worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: binformat.ts  geo.ts  graphStore.ts  handlers.ts  heap.ts  index.ts  protocol.ts  router.ts
worker/test/: binformat.test.ts  fixtures.ts  golden.test.ts  handlers.test.ts  heap.test.ts  perf.test.ts  protocol.test.ts  router.test.ts  store.test.ts  synthetic.ts
